Stable version 0.6.0 Bot now has different keyboard and was overall improved

--- a/locale/ru.json
+++ b/locale/ru.json
@@ -4,9 +4,16 @@
     "menu":"Меню",
     "back":"Возвращаемся в меню",
     "useButtons":"Используйте кнопки под сообщением",
-    "anket":"Анкета",
-    "anketDescr":"Пожалуйста, ответьте на все вопросы",
+    "anket":"Связаться с нами",
+    "anketDescr":"Пожалуйста, дайте ответ на следующие вопросы",
+    "anketQuestion1":"Введите свое полное имя",
+    "anketQuestion2":"Введите телефон, за которым можно с вами связаться",
+    "anketQuestion3":"Почему вы хотите с нами связаться?",
+    "anketQuestion4":"Отправьте нам свое сообщение или вернитесь в меню",
+    "thankyou":"Спасибо за ваши ответы, мы скоро с вами свяжемся",
     "takeTest":"Пройти тест",
     "mylvl":"Текущий Уровень",
-    "lvl":"Вот ваш текущий уровень:\nУр."
+    "lvl":"Вот ваш текущий уровень:\nУр.",
+    "badButton":"Кажется вы нажали кнопку, которая не должна была существовать.",
+    "afterRestart":"Кажется бот потерял вашу позицию относительно меню!"
 }
