--- a/locale/en.json
+++ b/locale/en.json
@@ -4,16 +4,20 @@
     "menu":"Menu",
     "back":"Back to menu",
     "useButtons":"Use buttons under the message",
-    "anket":"Get in contact",
-    "anketDescr":"Please answer following questions",
-    "anketQuestion1":"Enter your full name",
-    "anketQuestion2":"Enter a phone number with which we can contact you",
-    "anketQuestion3":"Why you want to contact us?",
-    "anketQuestion4":"Send us your message or go back to menu",
+    "contact":"Get in contact",
+    "contactDescr":"Please answer following questions",
     "thankyou":"Thanks for your answers, we will contact you soon",
     "takeTest":"Complete a test",
     "mylvl":"Current Level",
     "lvl":"Here's your current level:\n Lv.",
     "badButton":"Look like you pressed button that wasn't suppose to exist.",
-    "afterRestart":"Looks like bot lost your menu relative position!"
+    "afterRestart":"Looks like bot lost your menu relative position!",
+    "sendNews":"Send your reply",
+    "newsDescr":"Send here your text and/or photos",
+    "makeTest":"Make Test",
+    "deleteTest":"Delete Test",
+    "admin":"Admin Menu",
+    "replyMessage":"Send your reply",
+    "doReply":"Reply",
+    "replyDone":"REPLY ALREADY DONE"
 }
