--- a/locale/ru.json
+++ b/locale/ru.json
@@ -1,19 +1,23 @@
 {
     "start":"👋",
-    "userCreated":"Пользователь успешно создан!\nСогласно стандартным настройкам, вы будете получать новостные сообщения.\nНовостные уведомления можно отключить в меню \"Текущий уровень\"",
+    "userCreated":"Пользователь зарегистрирован!\nВ этом боте вы будете получать новости",
     "menu":"Меню",
     "back":"Возвращаемся в меню",
     "useButtons":"Используйте кнопки под сообщением",
-    "anket":"Связаться с нами",
-    "anketDescr":"Пожалуйста, дайте ответ на следующие вопросы",
-    "anketQuestion1":"Введите свое полное имя",
-    "anketQuestion2":"Введите телефон, за которым можно с вами связаться",
-    "anketQuestion3":"Почему вы хотите с нами связаться?",
-    "anketQuestion4":"Отправьте нам свое сообщение или вернитесь в меню",
-    "thankyou":"Спасибо за ваши ответы, мы скоро с вами свяжемся",
+    "contact":"Связаться с нами",
+    "contactDescr":"Ваше сообщение будет отправлено представителю \"Перший Європейский\"",
+    "thankyou":"Спасибо за ваш запрос.",
     "takeTest":"Пройти тест",
     "mylvl":"Текущий Уровень",
     "lvl":"Вот ваш текущий уровень:\nУр.",
     "badButton":"Кажется вы нажали кнопку, которая не должна была существовать.",
-    "afterRestart":"Кажется бот потерял вашу позицию относительно меню!"
+    "afterRestart":"Кажется бот потерял вашу позицию относительно меню! Возвращаемся!",
+    "sendNews":"Отправить новость",
+    "newsDescr":"Отправьте текст новости и/или фото.",
+    "makeTest":"Создать тест",
+    "deleteTest":"Удалить тест",
+    "admin":"Меню администратора",
+    "replyMessage":"Отправьте свой ответ",
+    "doReply":"🇷🇺 Ответить",
+    "replyDone":"ОТВЕТ УЖЕ ПРЕДОСТАВЛЕН"
 }
