--- a/locale/ru.json
+++ b/locale/ru.json
@@ -11,7 +11,7 @@
     "mylvl":"Текущий Уровень",
     "lvl":"Вот ваш текущий уровень:\nУр.",
     "badButton":"Кажется вы нажали кнопку, которая не должна была существовать.",
-    "afterRestart":"Кажется бот потерял вашу позицию относительно меню! Возвращаемся!",
+    "afterRestart":"Кажется бот потерял вашу позицию относительно меню!",
     "sendNews":"Отправить новость",
     "newsDescr":"Отправьте текст новости и/или фото.",
     "makeTest":"Создать тест",
@@ -19,5 +19,11 @@
     "admin":"Меню администратора",
     "replyMessage":"Отправьте свой ответ",
     "doReply":"🇷🇺 Ответить",
-    "replyDone":"ОТВЕТ УЖЕ ПРЕДОСТАВЛЕН"
+    "replyDone":"ОТВЕТ УЖЕ ПРЕДОСТАВЛЕН",
+    "chooseQuiz":"Выберите тест, который вы хотите пройти ↴",
+    "chosenQuiz":"Тест: ",
+    "startQuiz":"▶️ Пройти тест",
+    "endQuiz":"Конец теста! Посмотрим результаты:",
+    "quizNumber":"Вопрос №",
+    "lvlRequired":"\n⛔ Требуемый уровень: "
 }
