--- a/locale/ua.json
+++ b/locale/ua.json
@@ -11,7 +11,7 @@
     "mylvl":"Поточний рівень",
     "lvl":"Ось ваш поточний рівень:\nРів.",
     "badButton":"Здається ви натиснули на кнопку, яка не повинна була існувати!",
-    "afterRestart":"Здається, бот загубив вашу позицию відносно меню! Повертаємося!",
+    "afterRestart":"Здається, бот загубив вашу позицию відносно меню!",
     "sendNews":"Відправити новину",
     "newsDescr":"Відправте сюди текст, та/або фото.",
     "makeTest":"Створити тест",
@@ -19,5 +19,11 @@
     "admin":"Меню адміністратора",
     "replyMessage":"Відправте свою відповідь",
     "doReply":"🇺🇦 Відповісти",
-    "replyDone":"ВІДПОВІДЬ ВЖЕ НАДАНА"
+    "replyDone":"ВІДПОВІДЬ ВЖЕ НАДАНА",
+    "chooseQuiz":"Виберіть тест, який ви бажаєте пройти ↴",
+    "chosenQuiz":"Тест: ",
+    "startQuiz":"▶️ Пройти тест",
+    "endQuiz":"Кінець тесту! Переглянемо результати:",
+    "quizNumber":"Питання №",
+    "lvlRequired":"\n⛔ Необхідний рівень: "
 }
