--- a/locale/en.json
+++ b/locale/en.json
@@ -14,16 +14,33 @@
     "afterRestart":"Looks like bot lost your menu relative position!",
     "sendNews":"Send your reply",
     "newsDescr":"Send here your text and/or photos",
-    "makeTest":"Make Test",
-    "deleteTest":"Delete Test",
+    "makeTest":"Make",
+    "editTest":"Edit",
+    "deleteTest":"Delete",
     "admin":"Admin Menu",
     "replyMessage":"Send your reply",
     "doReply":"Reply",
     "replyDone":"REPLY ALREADY DONE",
-    "chooseQuiz":"Select a quiz you want to complete ↴",
-    "chosenQuiz":"Test: ",
+    "chooseQuiz":"Select a quiz ↴",
+    "chosenQuiz":"Test",
     "startQuiz":"▶️ Do test",
     "endQuiz":"Test end! Let's see the results:",
-    "quizNumber":"Question №",
-    "lvlRequired":"\n⛔ LVL Required: "
+    "questionNumber":"Question ",
+    "lvlRequired":"\n⛔ LVL Required: ",
+    "noLimit":"No",
+    "testName":"Enter the test name",
+    "testDescription":"Enter the test description",
+    "description":"Test description",
+    "testLanguage":"Is test limited to language?",
+    "testLvl":"Is test limited to level?",
+    "testMade":"Test made successfully, now making questions",
+    "testDeleted":"\n🟥 Test deleted",
+    "questionName":"Enter question name",
+    "questionAnswers":"Enter answers if needed, press No Answers if not",
+    "questionCorrectAnswer":"Enter correct answer",
+    "questionMade":"Question succesfully made. You can return to menu, or enter another question",
+    "noQuestions":"There is no questions in this test, it's an error",
+    "editBasis":"Edit test basis",
+    "addQuestion":"Add question",
+    "newName":"New Test Name"
 }
