--- a/locale/ua.json
+++ b/locale/ua.json
@@ -14,16 +14,33 @@
     "afterRestart":"Здається, бот загубив вашу позицию відносно меню!",
     "sendNews":"Відправити новину",
     "newsDescr":"Відправте сюди текст, та/або фото.",
-    "makeTest":"Створити тест",
-    "deleteTest":"Видалити тест",
+    "makeTest":"Створити",
+    "editTest":"Редагувати",
+    "deleteTest":"Видалити",
     "admin":"Меню адміністратора",
     "replyMessage":"Відправте свою відповідь",
     "doReply":"🇺🇦 Відповісти",
     "replyDone":"ВІДПОВІДЬ ВЖЕ НАДАНА",
-    "chooseQuiz":"Виберіть тест, який ви бажаєте пройти ↴",
-    "chosenQuiz":"Тест: ",
+    "chooseQuiz":"Оберіть тест ↴",
+    "chosenQuiz":"Тест",
     "startQuiz":"▶️ Пройти тест",
     "endQuiz":"Кінець тесту! Переглянемо результати:",
-    "quizNumber":"Питання №",
-    "lvlRequired":"\n⛔ Необхідний рівень: "
+    "questionNumber":"Питання ",
+    "lvlRequired":"\n⛔ Необхідний рівень: ",
+    "noLimit":"Немає",
+    "testName":"Введіть назву тесту",
+    "testDescription":"Введіть опис тесту",
+    "description":"Описання тесту",
+    "testLanguage":"Вимоги до мови користувача?",
+    "testLvl":"Вимоги до рівня користувача?",
+    "testMade":"Тест успішно створений, тепер перейдемо до питаннь",
+    "testDeleted":"\n🟥 Тест видалено",
+    "questionName":"Введіть питання",
+    "questionAnswers":"Введіть варіанти відповідей через;точку;з;комою \nабо натисніть \"Немає\" якщо варіантів немає",
+    "questionCorrectAnswer":"Введіть правильну відповідь",
+    "questionMade":"Питання успішно створено. Можна повернутися в меню, або ввести наступне питання",
+    "noQuestions":"У цьому тесті немає питань, напевне це помилка",
+    "editBasis":"Змінити основу тесту",
+    "addQuestion":"Додати запитання",
+    "newName":"Нова назва тесту"
 }
