--- a/locale/ru.json
+++ b/locale/ru.json
@@ -14,16 +14,33 @@
     "afterRestart":"Кажется бот потерял вашу позицию относительно меню!",
     "sendNews":"Отправить новость",
     "newsDescr":"Отправьте текст новости и/или фото.",
-    "makeTest":"Создать тест",
-    "deleteTest":"Удалить тест",
+    "makeTest":"Создать",
+    "editTest":"Редактировать",
+    "deleteTest":"Удалить",
     "admin":"Меню администратора",
     "replyMessage":"Отправьте свой ответ",
     "doReply":"🇷🇺 Ответить",
     "replyDone":"ОТВЕТ УЖЕ ПРЕДОСТАВЛЕН",
-    "chooseQuiz":"Выберите тест, который вы хотите пройти ↴",
-    "chosenQuiz":"Тест: ",
+    "chooseQuiz":"Выберите тест ↴",
+    "chosenQuiz":"Тест",
     "startQuiz":"▶️ Пройти тест",
     "endQuiz":"Конец теста! Посмотрим результаты:",
-    "quizNumber":"Вопрос №",
-    "lvlRequired":"\n⛔ Требуемый уровень: "
+    "questionNumber":"Вопрос ",
+    "lvlRequired":"\n⛔ Требуемый уровень: ",
+    "noLimit":"Нету",
+    "testName":"Введите название теста",
+    "testDescription":"Введите описание теста",
+    "description":"Описание теста",
+    "testLanguage":"Требование к языку пользователя?",
+    "testLvl":"Требование к уровню пользователя?",
+    "testMade":"Тест успешно создан, теперь перейдём к вопросам",
+    "testDeleted":"\n🟥 Тест удалён",
+    "questionName":"Введите вопрос",
+    "questionAnswers":"Введите варианты ответа через;точку;с;запятой \nили нажмите \"Нету\" если вариантов нет",
+    "questionCorrectAnswer":"Введите правильный ответ",
+    "questionMade":"Вопрос успешно создан. Можна вернуться в меню, или ввести следующий вопрос",
+    "noQuestions":"В этом тесте нет вопросов, наверное это ошибка",
+    "editBasis":"Редактировать основу теста",
+    "addQuestion":"Добавить вопрос",
+    "newName":"Новое название теста"
 }
