--- a/locale/ua.json
+++ b/locale/ua.json
@@ -13,7 +13,7 @@
     "badButton":"Здається ви натиснули на кнопку, яка не повинна була існувати!",
     "afterRestart":"Здається, бот загубив вашу позицию відносно меню!",
     "sendNews":"Відправити новину",
-    "newsDescr":"Відправте сюди текст, та/або фото.",
+    "newsDescr":"Відправте сюди текст, та/або фото.\nВиділіть текст за допомогою *текст*, щоб зробити його жирним\nВиділіть текст за допомогою _текст_, щоб зробити його курсивним",
     "makeTest":"Створити",
     "editTest":"Редагувати",
     "deleteTest":"Видалити",
@@ -33,14 +33,14 @@
     "description":"Описання тесту",
     "testLanguage":"Вимоги до мови користувача?",
     "testLvl":"Вимоги до рівня користувача?",
-    "testMade":"Тест успішно створений, тепер перейдемо до питаннь",
+    "testMade":"Тест успішно створений, тепер перейдемо до створення питаннь",
     "testDeleted":"\n🟥 Тест видалено",
     "questionName":"Введіть питання",
     "questionAnswers":"Введіть варіанти відповідей через;точку;з;комою \nабо натисніть \"Немає\" якщо варіантів немає",
     "questionCorrectAnswer":"Введіть правильну відповідь",
     "questionMade":"Питання успішно створено. Можна повернутися в меню, або ввести наступне питання",
     "noQuestions":"У цьому тесті немає питань, напевне це помилка",
-    "editBasis":"Змінити основу тесту",
+    "editBasis":"Змінити параметри тесту",
     "addQuestion":"Додати запитання",
     "newName":"Нова назва тесту"
 }
