--- a/locale/ru.json
+++ b/locale/ru.json
@@ -13,7 +13,7 @@
     "badButton":"Кажется вы нажали кнопку, которая не должна была существовать.",
     "afterRestart":"Кажется бот потерял вашу позицию относительно меню!",
     "sendNews":"Отправить новость",
-    "newsDescr":"Отправьте текст новости и/или фото.",
+    "newsDescr":"Отправьте сюда текст новости и/или фото.\nВыделите текст с помощью *текст*, что-бы сделать его жирным\nВыделите текст с помощью  _текст_, что-бы сделать его курсивным",
     "makeTest":"Создать",
     "editTest":"Редактировать",
     "deleteTest":"Удалить",
@@ -33,14 +33,14 @@
     "description":"Описание теста",
     "testLanguage":"Требование к языку пользователя?",
     "testLvl":"Требование к уровню пользователя?",
-    "testMade":"Тест успешно создан, теперь перейдём к вопросам",
+    "testMade":"Тест успешно создан, теперь перейдём к созданию вопросов",
     "testDeleted":"\n🟥 Тест удалён",
     "questionName":"Введите вопрос",
     "questionAnswers":"Введите варианты ответа через;точку;с;запятой \nили нажмите \"Нету\" если вариантов нет",
     "questionCorrectAnswer":"Введите правильный ответ",
     "questionMade":"Вопрос успешно создан. Можна вернуться в меню, или ввести следующий вопрос",
     "noQuestions":"В этом тесте нет вопросов, наверное это ошибка",
-    "editBasis":"Редактировать основу теста",
+    "editBasis":"Редактировать параметры теста",
     "addQuestion":"Добавить вопрос",
     "newName":"Новое название теста"
 }
