--- a/locale/ru.json
+++ b/locale/ru.json
@@ -1,17 +1,17 @@
 {
     "start":"👋",
-    "userCreated":"Пользователь зарегистрирован!\nВ этом боте вы будете получать новости",
+    "userCreated":"Пользователь зарегистрирован!\nВ этом боте вы можете проходить тесты, получать новости, а также можете связаться с нами!",
     "menu":"Меню",
     "back":"Возвращаемся в меню",
-    "useButtons":"Используйте кнопки под сообщением",
+    "useButtons":"Используйте кнопки под сообщением!",
     "contact":"Связаться с нами",
     "contactDescr":"Ваше сообщение будет отправлено представителю \"Перший Європейский\"",
     "thankyou":"Спасибо за ваш запрос.",
     "takeTest":"Пройти тест",
     "mylvl":"Текущий Уровень",
-    "lvl":"Вот ваш текущий уровень:\nУр.",
+    "lvl":"Вот ваш уровень:\nУр.",
     "badButton":"Кажется вы нажали кнопку, которая не должна была существовать.",
-    "afterRestart":"Кажется бот потерял вашу позицию относительно меню!",
+    "afterRestart":"Экстренно возвращаемся в меню!",
     "sendNews":"Отправить новость",
     "newsDescr":"Отправьте сюда текст новости и/или фото.\nВыделите текст с помощью *текст*, что-бы сделать его жирным\nВыделите текст с помощью  _текст_, что-бы сделать его курсивным",
     "makeTest":"Создать",
