--- a/locale/ua.json
+++ b/locale/ua.json
@@ -1,17 +1,17 @@
 {
     "start":"👋",
-    "userCreated":"Користувач зареєстрований!\n У цьому боті ви будете отримувати новини.",
+    "userCreated":"Користувач зареєстрований!\n У цьому боті ви можете проходити тести, отримувати новини, а також можете зв'язатись з нами!",
     "menu":"Меню",
     "back":"Повертаємося у меню!",
-    "useButtons":"Використовуйте кнопки під повідомленням",
+    "useButtons":"Використовуйте кнопки під повідомленням!",
     "contact":"Зв'язатись з нами",
     "contactDescr":"Ваше повідомлення буде надіслано представнику центра \"Перший Європейский\"",
     "thankyou":"Дякуємо за ваш запит.",
     "takeTest":"Пройти тест",
     "mylvl":"Поточний рівень",
-    "lvl":"Ось ваш поточний рівень:\nРів.",
+    "lvl":"Ось ваш рівень:\nРів.",
     "badButton":"Здається ви натиснули на кнопку, яка не повинна була існувати!",
-    "afterRestart":"Здається, бот загубив вашу позицию відносно меню!",
+    "afterRestart":"Екстрено повертаємося у меню!",
     "sendNews":"Відправити новину",
     "newsDescr":"Відправте сюди текст, та/або фото.\nВиділіть текст за допомогою *текст*, щоб зробити його жирним\nВиділіть текст за допомогою _текст_, щоб зробити його курсивним",
     "makeTest":"Створити",
