--- a/locale/ru.json
+++ b/locale/ru.json
@@ -22,7 +22,7 @@
     "doReply":"🇷🇺 Ответить",
     "replyDone":"ОТВЕТ УЖЕ ПРЕДОСТАВЛЕН",
     "chooseQuiz":"Выберите тест ↴",
-    "chosenQuiz":"Тест",
+    "chosenQuiz":"📋 Тест",
     "startQuiz":"▶️ Пройти тест",
     "endQuiz":"Конец теста! Посмотрим результаты:",
     "questionNumber":"Вопрос ",
