--- a/locale/ua.json
+++ b/locale/ua.json
@@ -22,7 +22,7 @@
     "doReply":"🇺🇦 Відповісти",
     "replyDone":"ВІДПОВІДЬ ВЖЕ НАДАНА",
     "chooseQuiz":"Оберіть тест ↴",
-    "chosenQuiz":"Тест",
+    "chosenQuiz":"📋 Тест",
     "startQuiz":"▶️ Пройти тест",
     "endQuiz":"Кінець тесту! Переглянемо результати:",
     "questionNumber":"Питання ",
